--- a/tutorialExpressMongoDB/views/layout.pug
+++ b/tutorialExpressMongoDB/views/layout.pug
@@ -20,7 +20,9 @@ html(lang='en')
                 a(href='/catalog/books') All books
               li 
                 a(href='/catalog/authors') All authors
-              li 
+              li
+                a(href='/catalog/countries') All countries
+              li
                 a(href='/catalog/genres') All genres
               li 
                 a(href='/catalog/bookinstances') All book-instances
