--- a/tutorialExpressMongoDB/views/author_delete.pug
+++ b/tutorialExpressMongoDB/views/author_delete.pug
@@ -2,7 +2,10 @@ extends layout
 
 block content
   h1 #{title}: #{author.name}
-  p= author.lifespan
+  if author.date_of_death==NULL
+     p #{author.date_of_birth_formatted} - #{author.date_of_death_formatted}
+  else
+    p #{author.lifespan}
   
   if author_books.length
   
