--- a/tutorialExpressMongoDB/views/author_form.pug
+++ b/tutorialExpressMongoDB/views/author_form.pug
@@ -15,7 +15,10 @@ block content
       
       label(for='date_of_death') Date of death:
       input#date_of_death.form-control(type='date' name='date_of_death' value=(undefined===author ? '' : author.date_of_death) )
-    
+    div.form-group
+      label(for='country') Country:
+      input#country.form-control(type='text' placeholder="Mi Españita" name='country' value=(undefined===author ? '' : author.country) )
+        
     button.btn.btn-primary(type='submit') Submit
   if errors 
     ul
