--- a/tutorialExpressMongoDB/views/author_detail.pug
+++ b/tutorialExpressMongoDB/views/author_detail.pug
@@ -1,8 +1,10 @@
 extends layout
 
 block content
-
-  h1 Author: #{author.name}
+  if author_country.country==NULL
+    h1 Author: #{author.name}
+  else
+    h1 Author: #{author.name} (#{author_country.country.name})
   if author.date_of_death==NULL
      p #{author.date_of_birth_formatted} - #{author.date_of_death_formatted}
   else
