--- a/tutorialExpressMongoDB/views/layout.pug
+++ b/tutorialExpressMongoDB/views/layout.pug
@@ -27,6 +27,8 @@ html(lang='en')
               li 
                 a(href='/catalog/bookinstances') All book-instances
               li 
+                a(href='/catalog/formatos') All Formatos
+              li 
                 hr
               li 
                 a(href='/catalog/author/create') Create new author
