--- a/tutorialExpressMongoDB/views/layout.pug
+++ b/tutorialExpressMongoDB/views/layout.pug
@@ -24,6 +24,8 @@ html(lang='en')
                 a(href='/catalog/countries') All countries
               li
                 a(href='/catalog/genres') All genres
+              li
+                a(href='/catalog/prizes') All prizes
               li 
                 a(href='/catalog/bookinstances') All book-instances
               li 
@@ -34,6 +36,10 @@ html(lang='en')
                 a(href='/catalog/author/create') Create new author
               li 
                 a(href='/catalog/genre/create') Create new genre
+              li 
+                a(href='/catalog/prize/create') Create new prize
+              li 
+                a(href='/catalog/formato/create') Create new formato
               li 
                 a(href='/catalog/book/create') Create new book
               li 
