--- a/tutorialExpressMongoDB/views/prize_detail.pug
+++ b/tutorialExpressMongoDB/views/prize_detail.pug
@@ -16,3 +16,8 @@ block content
 
       else
         p This prize has no books
+    hr
+    p
+      a(href=prize.url+'/delete') Delete Prize
+    p
+      a(href=prize.url+'/update') Update Prize
