Formato completado al 100% con update delete y todo!

--- a/tutorialExpressMongoDB/views/formato_detail.pug
+++ b/tutorialExpressMongoDB/views/formato_detail.pug
@@ -16,3 +16,9 @@ block content
 
       else
         p This format has no books
+        
+    hr
+    p
+      a(href=formato.url+'/delete') Delete formato
+    p
+      a(href=formato.url+'/update') Update formato
