--- a/tutorialExpressMongoDB/public/stylesheets/style.css
+++ b/tutorialExpressMongoDB/public/stylesheets/style.css
@@ -3,3 +3,23 @@
   padding: 0;
   list-style: none;
 }
+.container{
+  width: 80%;
+  float: left;
+}
+.pagination{
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sortLink{
+  color: black;
+  font-weight: bold;
+}
