--- a/tutorialExpressMongoDB/views/book_list.pug
+++ b/tutorialExpressMongoDB/views/book_list.pug
@@ -1,13 +1,19 @@
 extends layout
 
 block content
-  h1= title
-  
-  ul
-    each book in book_list
-      li 
-        a(href=book.url) #{book.title} 
-        |  (#{book.author.name})
-
-    else
-      li There are no books.
+  .container
+    h1= title
+    
+    p Results: #{count}
+    table.table
+      tr
+        != createOrdering()
+      each book in book_list
+        tr
+          td 
+            a(href=book.url) #{book.title}
+          td #{book.author.name}
+    if (pages > 1)
+    .container
+      .pagination
+        != createPagination(pages, page)
