--- a/tutorialExpressMongoDB/views/author_list.pug
+++ b/tutorialExpressMongoDB/views/author_list.pug
@@ -3,11 +3,17 @@ extends layout
 block content
   h1= title
   
-  ul
+  p Results: #{count}
+  table.table
+    tr
+      != createOrdering()
     each author in author_list
-      li 
-        a(href=author.url) #{author.name} 
-        |  (#{author.date_of_birth_formatted} - #{author.date_of_death_formatted})
+      tr
+        td
+          a(href=author.url) #{author.name} 
+        td #{author.date_of_birth_formatted} - #{author.date_of_death_formatted}
 
-    else
-      li There are no authors.
+  if (pages > 1)
+  .container
+    .pagination
+      != createPagination(pages, page)
