--- a/tutorialExpressMongoDB/views/book_detail.pug
+++ b/tutorialExpressMongoDB/views/book_detail.pug
@@ -12,11 +12,16 @@ block content
       a(href=val.url) #{val.name}
       if index < book.genre.length - 1
         |, 
-  p #[strong Formato:]&nbsp;
-    each val, index in book.formato
-      a(href=val.url) #{val.name}
+  p #[strong Formatos:]&nbsp;
+    each val2, index in book.formato
+      a(href=val2.url) #{val2.name}
       if index < book.formato.length - 1
-        |,
+        |&nbsp;,
+  p #[strong Prizes:]&nbsp;
+    each val3, index in book.prize
+      a(href=val3.url) #{val3.name}
+      if index < book.prize.length - 1
+        |&nbsp;,
         
   div(style='margin-left:20px;margin-top:20px')
     h4 Copies
