Género ordenación y paginación DONE

--- a/tutorialExpressMongoDB/views/genre_list.pug
+++ b/tutorialExpressMongoDB/views/genre_list.pug
@@ -1,11 +1,17 @@
 extends layout
-
 block content
-  h1= title
-  
-  ul
-    each genre in genre_list
-      li 
-        a(href=genre.url) #{genre.name}
-    else
-      li There are no genres.
+    h1= title
+    
+    p Results: #{count}
+    table.table
+      tr
+        != createOrdering()
+      each genre in genre_list
+        tr
+          td
+            a(href=genre.url) #{genre.name} 
+
+    if (pages > 1)
+    .container
+      .pagination
+        != createPagination(pages, page)
