--- a/tutorialExpressMongoDB/views/country_detail.pug
+++ b/tutorialExpressMongoDB/views/country_detail.pug
@@ -15,4 +15,6 @@ block content
         p This country has no authors.
   hr
   p
-  a(href=country.url+'/delete') Delete country
+    a(href=country.url+'/delete') Delete country
+  p
+    a(href=country.url+'/update') Update country
