--- a/tutorialExpressMongoDB/views/layout.pug
+++ b/tutorialExpressMongoDB/views/layout.pug
@@ -35,6 +35,8 @@ html(lang='en')
               li 
                 a(href='/catalog/author/create') Create new author
               li 
+                a(href='/catalog/country/create') Create new country
+              li 
                 a(href='/catalog/genre/create') Create new genre
               li 
                 a(href='/catalog/prize/create') Create new prize
